Fixing overflow

--- a/src/components/trips/TripItem.module.scss
+++ b/src/components/trips/TripItem.module.scss
@@ -58,7 +58,7 @@
   .content {
     padding: 1rem;
 
-    overflow-y: scroll;
+    overflow-y: auto;
 
     .cities {
       text-transform: capitalize;
