--- a/src/components/trips/itinerary/flights/AddFlight.module.scss
+++ b/src/components/trips/itinerary/flights/AddFlight.module.scss
@@ -14,5 +14,5 @@
   flex-direction: column;
   gap: 1rem;
 
-  overflow: scroll;
+  overflow: auto;
 }
