--- a/src/components/trips/itinerary/flights/FlightList.module.scss
+++ b/src/components/trips/itinerary/flights/FlightList.module.scss
@@ -43,7 +43,7 @@
   flex-wrap: nowrap;
   justify-content: flex-start;
 
-  overflow-x: scroll;
+  overflow-x: auto;
   @include hide-horizonatal-scrollbar;
 }
 
