--- a/src/components/ui/Modal.module.scss
+++ b/src/components/ui/Modal.module.scss
@@ -28,7 +28,7 @@
   background-color: white;
   border-radius: 1rem;
 
-  overflow: scroll;
+  overflow: auto;
   z-index: 101;
 
   .modal-title {
