--- a/src/pages/AddTrip.module.scss
+++ b/src/pages/AddTrip.module.scss
@@ -36,7 +36,7 @@
 
   border-radius: 0 1rem 1rem 0;
 
-  overflow: scroll;
+  overflow: auto;
 }
 
 .completed-screen {
